# bigquery-schema-generator-rust

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPERS.md  LICENSE  README.md  SECURITY.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Formula/: bq-schema-gen.rb
benches/: benchmark.rs
examples/: basic_json.rs  csv_processing.rs  diff_example.rs  existing_schema.rs  output_formats.rs  watch_example.rs
examples/data/: sample.csv  sample.json
scripts/: compare_performance.sh
src/: error.rs  lib.rs  main.rs
src/cli/: definition.rs  diff.rs  generate.rs  mod.rs  validate.rs
src/diff/: mod.rs  output.rs
src/inference/: mod.rs
src/input/: csv.rs  json.rs  mod.rs
src/output/: mod.rs
src/schema/: existing.rs  generator.rs  mod.rs  types.rs
src/validate/: error.rs  mod.rs
src/watch/: mod.rs
tests/: cli_tests.rs  csv_tests.rs  diff_cli_tests.rs  edge_cases.rs  integration_tests.rs  parallel_cli_tests.rs  proptest_tests.proptest-regressions  proptest_tests.rs  validation_cli_tests.rs  watch_cli_tests.rs
