[package]
name = "bq-schema-gen"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
description = "Generate BigQuery schema from JSON or CSV data files"
license = "Apache-2.0"
repository = "https://github.com/omribromberg/bigquery-schema-generator-rust"
homepage = "https://github.com/omribromberg/bigquery-schema-generator-rust"
documentation = "https://docs.rs/bq-schema-gen"
readme = "README.md"
authors = ["Omri Bromberg"]
keywords = ["bigquery", "schema", "json", "csv", "google-cloud"]
categories = ["command-line-utilities", "parsing"]
exclude = ["bigquery-schema-generator-python/", "benches/", "tests/"]

[[bin]]
name = "bq-schema-gen"
path = "src/main.rs"

[lib]
name = "bq_schema_gen"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
csv = "1.3"
clap = { version = "4.4", features = ["derive", "string"] }
regex = "1.10"
indexmap = { version = "2.1", features = ["serde"] }
thiserror = "1.0"
once_cell = "1.19"
glob = "0.3"
colored = "2"

# Parallel processing
rayon = "1.8"
indicatif = "0.17"
num_cpus = "1.16"

# Watch mode
notify = "6.1"
notify-debouncer-mini = "0.4"

[dev-dependencies]
tempfile = "3.9"
pretty_assertions = "1.4"
proptest = "1.4"

[build-dependencies]
clap = { version = "4.4", features = ["derive", "string"] }
clap_complete = "4.4"
clap_mangen = "0.2"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
